[package]
name = "quickshards"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
envy = "0.4.2"
serde = { version = "1.0.136", features = ["derive"] }
chrono = "0.4"

[[bin]]
name = "qs"
path = "src/main.rs"