[package]
name = "quickshards"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.136", features = ["derive"] }
toml = "0.5"
chrono = "0.4"
dirs = "4.0.0"

[[bin]]
name = "qs"
path = "src/main.rs"