[package]
name = "quickshards"
version = "0.4.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.137", features = ["derive"] }
toml = "0.5"
chrono = "0.4"
dirs = "4.0.0"
clap = { version = "3.1.18", features = ["derive"] }

[[bin]]
name = "qs"
path = "src/main.rs"